--- a/.github/workflows/build-and-publish-docker-image.yaml
+++ b/.github/workflows/build-and-publish-docker-image.yaml
@@ -13,6 +13,8 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - run: cat website_project/main.py
+
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
