--- a/.github/workflows/build-and-publish-docker-image.yaml
+++ b/.github/workflows/build-and-publish-docker-image.yaml
@@ -12,8 +12,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        ref: my-test-checkout-branch
 
     - run: cat website_project/main.py
+    - run: git branch
 
     - name: Login to Docker Hub
       uses: docker/login-action@v1
