--- a/.github/workflows/build-and-publish-docker-image.yaml
+++ b/.github/workflows/build-and-publish-docker-image.yaml
@@ -4,18 +4,17 @@ on:
   push:
     branches:
       - main
-      - test-build-and-publish-docker-image-action*
+      - build-and-publish-docker-image-from-main-branch*
 
 jobs:
-  build-and-publish:
+  build-image-and-publish-to-dockerhub:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
       with:
-        ref: my-test-checkout-branch
+        ref: main
 
-    - run: cat website_project/main.py
     - run: git branch
 
     - name: Login to Docker Hub
@@ -29,6 +28,6 @@ jobs:
         docker build -t patryklaskowski/website_project:latest .
         docker images
 
-    - name: Push Docker image to Docker Hub
+    - name: Push Docker image to DockerHub
       run: |
         docker push patryklaskowski/website_project:latest
