--- a/.github/workflows/build-and-publish-docker-image.yaml
+++ b/.github/workflows/build-and-publish-docker-image.yaml
@@ -1,4 +1,5 @@
-name: Build and Publish Docker Image
+name: 🐳 Build and Publish Docker Image
+run-name: 🐳 Build nad publish docker image. Action triggered by pushing to main branch.
 
 on:
   push:
@@ -15,7 +16,8 @@ jobs:
       with:
         ref: main
 
-    - run: git branch
+    - name: Verify current branch
+      run: git branch
 
     - name: Login to Docker Hub
       uses: docker/login-action@v1
