--- a/.github/workflows/build-and-publish-docker-image.yaml
+++ b/.github/workflows/build-and-publish-docker-image.yaml
@@ -1,17 +1,17 @@
-name: 🐳 Build and Publish Docker Image
-run-name: 🐳 Build nad publish docker image. Action triggered by pushing to main branch.
+name: 🐳 Build and publish Docker image
+run-name: 🚀 Build and publish Docker image triggered by `${{ github.event_name }}` event
 
 on:
   push:
     branches:
       - main
-      - build-and-publish-docker-image-from-main-branch*
+      - trigger/build-and-publish-docker-image*
 
 jobs:
   build-image-and-publish-to-dockerhub:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
+    - name: Checkout to `main` branch
       uses: actions/checkout@v3
       with:
         ref: main
