--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,25 @@
+[tool.poetry]
+name = "website-project"
+version = "0.1.0"
+description = "My website project to register activities"
+authors = ["Patryk Laskowski <patryk.jacek.laskowski@gmail.com>"]
+readme = "README.md"
+packages = [{include = "website_project"}]
+
+[tool.poetry.dependencies]
+python = ">=3.8.0"
+Flask = "^2.3.3"
+
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.pytest.ini_options]
 log_cli = true
-log_cli_level = "CRITICAL"
-log_cli_format = "%(message)s"
-
-log_file = "pytest.log"
-log_file_level = "DEBUG"
+log_cli_level = "DEBUG"
 log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
 log_file_date_format = "%Y-%m-%d %H:%M:%S"
