--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,14 @@ readme = "README.md"
 packages = [{include = "website_project"}]
 
 [tool.poetry.dependencies]
-python = ">=3.8.0"
+python = "^3.8"
 Flask = "^2.3.3"
 
-
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
