setup persistent storage connection in ci/cd

--- a/.github/workflows/run-test-suite.yaml
+++ b/.github/workflows/run-test-suite.yaml
@@ -7,6 +7,11 @@ on:
   pull_request:
     branches: [ "main", "trigger/run-test-suite*" ]
 
+env:
+  MONGODB_DB_NAME: "${{ secrets.MONGODB_DB_NAME }}"
+  MONGODB_USERNAME: "${{ secrets.MONGODB_USERNAME }}"
+  MONGODB_PASSWORD: "${{ secrets.MONGODB_PASSWORD }}"
+
 jobs:
   run-tests:
 
