--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,22 @@
 [tool.pytest.ini_options]
 log_cli = true
-log_cli_level = "CRITICAL"
-log_cli_format = "%(message)s"
+log_cli_level = "DEBUG"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
 
-log_file = "pytest.log"
-log_file_level = "DEBUG"
-log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
-log_file_date_format = "%Y-%m-%d %H:%M:%S"
+[project]
+name = "website_project"
+version = "0.1.0"
+authors = [
+    {name = "Patryk Laskowski", email = "patryk.jacek.laskowski@gmail.com"},
+]
+description = "Project to track activity."
+readme = "README.md"
+requires-python = ">=3.8"
+
+[build-system]
+requires = ["setuptools", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["website_project"]
