--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-aniso8601==9.0.1
-click==8.1.3
-exceptiongroup==1.1.1
-Flask==2.2.3
-Flask-RESTful==0.3.9
-importlib-metadata==6.5.0
+blinker==1.6.2
+click==8.1.7
+dnspython==2.4.2
+exceptiongroup==1.1.3
+flask==2.3.3
+importlib-metadata==6.8.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.2
+MarkupSafe==2.1.3
 packaging==23.1
-pluggy==1.0.0
-pytest==7.3.1
-pytz==2023.3
-six==1.16.0
+pluggy==1.3.0
+pymongo==4.5.0
+pytest==7.4.0
+python-dotenv==1.0.0
+PyYAML==6.0.1
 tomli==2.0.1
-Werkzeug==2.2.3
-zipp==3.15.0
+werkzeug==2.3.7
+zipp==3.16.2
