add missing mongodb_password env variable for deployment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,3 +25,4 @@ jobs:
       run: ansible-playbook -i "${{ secrets.DEPLOY_SERVER_HOST }}," ./devops/ansible/playbooks/run-with-docker.yaml
       env:
         ANSIBLE_HOST_KEY_CHECKING: false
+        MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
