--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.7
 dnspython==2.4.2
 exceptiongroup==1.1.3
 Flask==2.3.3
+Flask-Login==0.6.2
 importlib-metadata==6.8.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
